commit al master del blogspot en su version ams reciente

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 atractivo e interesante post</h1>
                 <p>Y este es el parrafo de inicio donde
                     vamos a explicar las cosas interesantes
-                    que se pueden hacer con ramas
+                    que se pueden hacer con ramas y mucho mas
                 </p>
             </div>
            
