--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
         <div id="container">
+            <div id="cabecera">
+
+                cabecera 
+            </div>
             <div id="post"> <h1>Este es el titulo del
                 atractivo e interesante post</h1>
                 <p>Y este es el parrafo de inicio donde
