agregado el contenido adicional del blogy ujna mejor tipografia

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <p>Y este es el parrafo de inicio donde
                     vamos a explicar las cosas interesantes
                     que se pueden hacer con ramas y mucho mas
-                </p>
+                </p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod alias voluptatem recusandae hic! Voluptatem, magnam enim? Esse similique, harum error modi at eligendi aliquid facere exercitationem, maxime dignissimos, non fugit.</p>
             </div>
            
         </div>
