--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
         <div id="container">
             <div id="cabecera">
-                    JanselBlog <span id="spancontainer"> tu blog de confianza</span>
+                    JanselBlog <span id="spancontainer"> mi blog de cabecera</span>
             </div>
             <div id="post"> <h1>Este es el titulo del
                 atractivo e interesante post</h1>
