agrege subscripcion, cambie cabecera maestra y puse todo azul

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
         <div id="container">
             <div id="cabecera">
-                    JanselBlog <span id="spancontainer"> tu blog de confianza</span>
+                    JanselBlog <span id="spancontainer"> tu blog Maestro</span>
             </div>
             <div id="post"> <h1>Este es el titulo del
                 atractivo e interesante post</h1>
@@ -15,6 +15,7 @@
                     vamos a explicar las cosas interesantes
                     que se pueden hacer con ramas y mucho mas
                 </p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod alias voluptatem recusandae hic! Voluptatem, magnam enim? Esse similique, harum error modi at eligendi aliquid facere exercitationem, maxime dignissimos, non fugit.</p>
+                <p>Subscripbete y dale  like!</p>
             </div>
            
         </div>
