--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>El titulo del post</title>
+    <title>Hyperblog El blog del futuro</title>
     <link rel="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
