Agregado logo, cambios de colores en background y cambios al post

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
 <body>
         <div id="container">
             <div id="cabecera">
+                <img src="imagenes/dragon.png" alt="" id="logo">
                     JanselBlog <span id="spancontainer"> mi blog de cabecera</span>
             </div>
             <div id="post"> <h1>Este es el titulo del
                 atractivo e interesante post</h1>
-                <p>Y este es el parrafo de inicio donde
+                <div id="parrafos"> <p>Y este es el parrafo de inicio donde
                     vamos a explicar las cosas interesantes
                     que se pueden hacer con ramas y mucho mas
                 </p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod alias voluptatem recusandae hic! Voluptatem, magnam enim? Esse similique, harum error modi at eligendi aliquid facere exercitationem, maxime dignissimos, non fugit.</p>
-            </div>
+            </div></div>
+               
            
         </div>
 </body>
