agregado el footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
                     que se pueden hacer con ramas y mucho mas
                 </p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod alias voluptatem recusandae hic! Voluptatem, magnam enim? Esse similique, harum error modi at eligendi aliquid facere exercitationem, maxime dignissimos, non fugit.</p>
             </div>
-           
+            <div id="footer">
+                <p>hecho con amor por jansel porque sí</p>
+            </div>
         </div>
+           
 </body>
 </html>
