--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             </div>
             <div id="post"> <h1>Este es el titulo del
                 atractivo e interesante post</h1>
-                <div id="parrafos"> <p>Y este es el parrafo de inicio donde
+                <div id="parrafos"> <p>Y este es el párrafo de inicio donde
                     vamos a explicar las cosas interesantes
                     que se pueden hacer con ramas y mucho mas
                 </p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod alias voluptatem recusandae hic! Voluptatem, magnam enim? Esse similique, harum error modi at eligendi aliquid facere exercitationem, maxime dignissimos, non fugit.</p>
