mejorado el README.md

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     vamos a explicar las cosas interesantes
                     que se pueden hacer con ramas y mucho mas
                 </p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod alias voluptatem recusandae hic! Voluptatem, magnam enim? Esse similique, harum error modi at eligendi aliquid facere exercitationem, maxime dignissimos, non fugit.</p>
-                <p><img src="imagenes/power_girl.jpg" alt=""></p>
+                <p><img src="https://i.imgur.com/iQLA94x.png" alt=""></p>
                 <p>Subscripbete y dale  like!</p>
             </div>
             <div id="footer">
